8339238: Update to use jtreg 7.5.1
Reviewed-by: sgehwolf, andrew
Backport-of: 9042aa82a890b0f0348ac8127dbd3268f2620346